--- a/src/app/staff/solo/solo.page.scss
+++ b/src/app/staff/solo/solo.page.scss
@@ -1,3 +1,7 @@
 .app {
-    
+    width: 100vw;
+    min-height: 100vh;
+    background-color: white;
+    overflow-y: auto;
+    padding-bottom: 124px;
 }
