--- a/src/app/staff/solo/waiter/dish-modal/dish-modal.component.scss
+++ b/src/app/staff/solo/waiter/dish-modal/dish-modal.component.scss
@@ -182,6 +182,7 @@
                         align-items: center;
                         font-size: 16px;
                         padding-left: 8px;
+                        color: var(--black);
                     }
 
                     .text {
