--- a/src/app/staff/solo/waiter/dish/dish.component.scss
+++ b/src/app/staff/solo/waiter/dish/dish.component.scss
@@ -26,7 +26,7 @@
         }
         .id {
             font-size: 14px;
-            color: var(--text-color);
+            color: var(--text-color);   
         }
     }
 
@@ -34,6 +34,7 @@
         padding: 6px;
         display: flex;
         justify-content: flex-end;
+        color: var(--black);
 
         &.red {
             color: var(--red);
